--- a/style.css
+++ b/style.css
@@ -16,20 +16,11 @@
     font-family: Arial, Helvetica, sans-serif;
 }
 
-/* body {
-    overflow-x: hidden;
-} */
 
 nav.navbar {
     background-color: #F1F3FF;
 }
 
-.navbar-brand {
-    text-transform: uppercase;
-    background-color: #0D28A6;
-    font-weight: 700;
-    letter-spacing: 2px;
-}
 
 .offcanvas-body ul li a {
     color: #646464;
@@ -41,24 +32,12 @@ nav.navbar {
     border-bottom: 2px solid black;
 }
 
-/* main section start */
-
 .main-section {
     height: 100vh;
     background-color: #F1F3FF;
     position: relative;
 }
 
-.bg-car::before {
-    content: "";
-    position: absolute;
-    background-color: #0D28A6;
-    bottom: 0;
-    right: 0;
-    height: 50%;
-    width: 50%;
-    border-radius: 100px 0 0 0;
-}
 
 .tagline h2,
 .tagline a {
@@ -71,7 +50,6 @@ nav.navbar {
     color: #ffffff;
     box-shadow: 1px 10px 30px -10px #5CB85F;
     display: inline-block;
-    transition: all .3s;
     position: relative;
     overflow: hidden;
     z-index: 1;
@@ -84,7 +62,6 @@ nav.navbar {
     left: 0;
     width: 100%;
     height: 100%;
-    background-color: #5CB85F;
     z-index: -2;
 }
 
@@ -101,27 +78,15 @@ nav.navbar {
 }
 
 .btn.btn-success:hover {
-    color: #5CB85F;
+    color: #5CB85E;
 }
-
-.btn.btn-success:hover:before {
-    width: 100%;
-}
-
-/* end of main section */
-
-/* our-services section start*/
 
 .d-flex p .bi-check-lg {
     background-color: #CFD4ED;
     color: #0D28A6;
-    border-radius: 15px;
-    padding: 3px 5px;
+    border-radius: 10px;
+    padding: 2px 10px;
 }
-
-/* end of our-services section */
-
-/* why-us section start */
 
 .why-us .card-body {
     display: flex;
@@ -131,8 +96,6 @@ nav.navbar {
     transition: .5s ease;
     overflow: hidden;
 }
-
-/* custom yellow transition */
 
 .why-us .card-body.yellow:hover * {
     z-index: 9;
@@ -148,17 +111,13 @@ nav.navbar {
     height: 100%;
     background-color: #F9CC00;
     transition: .5s ease;
-    clip-path: circle(7% at 32.3px 35.3px);
+    clip-path: circle(5% at 25.3px 20.3px);
 }
 
 .why-us .card-body:hover.yellow::before {
     clip-path: circle(100%);
     border-radius: 5px;
 }
-
-/* end */
-
-/* custom red transition */
 
 .why-us .card-body.red:hover * {
     z-index: 9;
@@ -175,17 +134,13 @@ nav.navbar {
     height: 100%;
     background-color: #FA2C5A;
     transition: .5s ease;
-    clip-path: circle(7% at 32.3px 34.3px);
+    clip-path: circle(5% at 25.3px 20.3px);
 }
 
 .why-us .card-body:hover.red::before {
     clip-path: circle(100%);
     border-radius: 5px;
 }
-
-/* end */
-
-/* custom red transition */
 
 .why-us .card-body.blue:hover * {
     z-index: 9;
@@ -202,17 +157,13 @@ nav.navbar {
     height: 100%;
     background-color: #0D28A6;
     transition: .5s ease;
-    clip-path: circle(7% at 32.3px 34.3px);
+    clip-path: circle(5% at 25.3px 20.3px);
 }
 
 .why-us .card-body:hover.blue::before {
     clip-path: circle(100%);
     border-radius: 5px;
 }
-
-/* end */
-
-/* custom red transition */
 
 .why-us .card-body.green:hover * {
     z-index: 9;
@@ -229,7 +180,7 @@ nav.navbar {
     height: 100%;
     background-color: #5CB85F;
     transition: .5s ease;
-    clip-path: circle(7% at 32.3px 35.3px);
+    clip-path: circle(5% at 25.3px 20.3px);
 }
 
 .why-us .card-body:hover.green::before {
@@ -237,7 +188,6 @@ nav.navbar {
     border-radius: 5px;
 }
 
-/* end */
 
 .why-us .card-body p:nth-child(2) {
     margin-top: 5%;
@@ -252,10 +202,6 @@ nav.navbar {
     padding: 3px 6px;
     z-index: 1;
 }
-
-/* end of why-us section */
-
-/* testimonial section start */
 
 .banner .container {
     background-color: #0D28A6;
@@ -285,19 +231,13 @@ nav.navbar {
     color: black;
     font-size: 30px;
     border: 1px solid black;
-    padding: 3px 10px;
+    padding: 6px 6px;
     border-radius: 35px;
 }
 
-.bi.bi-chevron-left:hover,
-.bi.bi-chevron-right:hover {
-    background-color: #5CB85F;
-    border: 1px solid #5CB85F;
-    color: white;
-}
 
 .bi.bi-star-fill {
-    color: #F9CC00;
+    color: #1453b8;
 }
 
 .carousel-item img {
@@ -309,9 +249,6 @@ nav.navbar {
     cursor: pointer;
 }
 
-/* end of testimonial section */
-
-/* faq section start */
 
 .cursor-pointer {
     cursor: pointer;
@@ -322,7 +259,7 @@ nav.navbar {
     background-color: #0D28A6;
     margin-right: 16px;
     border-radius: 15px;
-    padding: 5px 7px;
+    padding: 0 10px;
     font-size: 18px;
     color: white;
     border: 1px solid #0D28A6;
@@ -343,7 +280,6 @@ nav.navbar {
     transition: .5s ease;
 }
 
-/* end of faq section */
 
 @media (max-width: 990px) {
     .main-section {
@@ -363,9 +299,3 @@ nav.navbar {
     }
 }
 
-@media (max-width:767px) {
-    .bg-car::before {
-        height: 30%;
-        width: 90%;
-    }
-}
